k8s/api.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
    name: api
    labels:
      app: api
      namespace: __VAR__NAMESPACE
spec:
  replicas: 1
  template:
    metadata:
      matchLabels:
      labels:
        app: api
    spec:
      # restartPolicy: OnFailure
      containers:
      - image: upluse10/ictsc-score-server:api-develop
        imagePullPolicy: Always
        name: api
        ports:
          - containerPort: 3000
        args:
          - sh
          - -c
          - " if [ -f \"tmp/pids/server.pid\" ]; then rm tmp/pids/server.pid; fi\n
           bundle exec rails server -b 0.0.0.0;"
---
apiVersion: v1
kind: Service
metadata:
  namespace: __VAR__NAMESPACE
  name: api
spec:
  selector:
    app: api
  type: ClusterIP
  ports:
    - port: 3000
