k8s/db.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: default
spec:
  serviceName: "db"
  replicas: 1
  podManagementPolicy: "Parallel"
  updateStrategy:
    type: "RollingUpdate"
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      # priorityClassName: system-cluster-critical
      containers:
        - name: db
          image: postgres:11.3-alpine
          securityContext:
            runAsUser: 0
          args:
            - -c
            - max_connections=200
            - -c
            - shared_buffers=256MB
            - -c
            - work_mem=4MB
          volumeMounts:
            - name: db
              mountPath: /var/lib/postgresql/data
          ports:
            - containerPort: 5432
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: db-pvc
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: db
spec:
  selector:
    app: db
  type: ClusterIP
  ports:
    - port: 5432
