k8s/mariadb.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: default
spec:
  serviceName: "mariadb"
  replicas: 1
  podManagementPolicy: "Parallel"
  updateStrategy:
    type: "RollingUpdate"
  selector:
    matchLabels:
      ictsc2018-score: db
  template:
    metadata:
      labels:
        ictsc2018-score: db
    spec:
      priorityClassName: system-cluster-critical
      containers:
        - name: mariadb
          image: mariadb:10.3.13
          securityContext:
            runAsUser: 0
          args:
          - "--character-set-server=utf8mb4"
          - "--collation-server=utf8mb4_unicode_ci"
          volumeMounts:
            - name: mariadb
              mountPath: /var/lib/mysql
          ports:
            - containerPort: 3306
      volumes:
      - name: mariadb
        persistentVolumeClaim:
          claimName: db-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    ictsc2018-score: db
  name: db
  namespace: default
spec:
  ports:
    - name: db
      port: 3306
      targetPort: 3306
  selector:
    ictsc2018-score: db
