k8s/plasma.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    ictsc2018-score: plasma
  name: plasma
spec:
  replicas: 1
  template:
    metadata:
      labels:
        ictsc2018-score: plasma
    spec:
      containers:
        - image: openfresh/plasma:0.2.2
          name: plasma
          ports:
          - name: plasma
            containerPort: 8080
      #restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    ictsc2018-score: plasma
  name: plasma
spec:
  ports:
    - name: "plasma"
      port: 3003
      targetPort: 8080
  clusterIP: None
  selector:
    ictsc2018-score: plasma
