k8s/ui.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    ictsc9-score: ui
  name: ui
spec:
  template:
    metadata:
      labels:
        ictsc9-score: ui
    spec:
      containers:
      - image: hotter/ictsc-score-server:ui
        imagePullPolicy: Always
        name: ui
        ports:
        - name: ui
          containerPort: 80
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    ictsc9-score: ui
  name: ui
spec:
  ports:
  - name: ui
    port: 80
    targetPort: 80
  selector:
    ictsc9-score: ui
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ui
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/whitelist-source-range: "172.16.0.0/12,10.0.0.0/8"
    ingress.kubernetes.io/ssl-redirect: "true"
    # ingress.kubernetes.io/auth-signin: https://$host/oauth2/start
    # ingress.kubernetes.io/auth-url: https://$host/oauth2/auth
spec:
  tls:
  - hosts:
    - contest.svc.icttoracon.net
    secretName: ui-tls
  rules:
  - host: contest.svc.icttoracon.net
    http:
      paths:
      - path: /
        backend:
          serviceName: ui
          servicePort: 80
